--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,14 @@
   "action": {
     "default_popup": "test.html",
     "default_icon": "/images/typing_extension_thumbnail.png"
-  }
+  },
+  "content_scripts": [
+    {
+      "js": ["scripts/content.js"],
+      "matches": [
+        "https://developer.chrome.com/docs/extensions/*",
+        "https://developer.chrome.com/docs/webstore/*"
+      ]
+    }
+  ]
 }
