--- a/manifest.json
+++ b/manifest.json
@@ -10,10 +10,7 @@
   "content_scripts": [
     {
       "js": ["/scripts/background.js"],
-      "matches": [
-        "https://developer.chrome.com/docs/extensions/*",
-        "https://developer.chrome.com/docs/webstore/*"
-      ]
+      "matches": ["<all_urls>"]
     }
   ]
 }
