--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,17 @@
 {
   "manifest_version": 3,
-  "name": "Typing Extension",
-  "description": "A type tester google extension",
+  "name": "Wordcount+",
+  "description": "Your all-in-one wordcounter. Count words, measure reading time and more!",
   "version": "1.0",
   "action": {
-    "default_popup": "test.html",
+    "default_popup": "popup.html",
     "default_icon": "/images/typing_extension_thumbnail.png"
   },
   "content_scripts": [
     {
-      "js": ["/scripts/background.js"],
+      "js": ["/scripts/service-worker.js"],
       "matches": ["<all_urls>"]
     }
-  ]
+  ],
+  "permissions": ["activeTab", "scripting"]
 }
